--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ url-pretty: "en.otomatikmuhendis.com"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "otomatikmuhendis"
+disqus: "a-clockwork-engineer"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-43894898-1"
