--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ navbar-links:
   Software: "category/software"
   Database: "category/database"
   Testing: "category/testing"
+  Categories: "categories"
+  Archive: "archive"
   About: "about"
   
 # --- Footer options --- #
@@ -40,11 +42,11 @@ author:
   name: Olcay Bayram
   email: "otomatikmuhendis@yahoo.com"
   fbadmin: olcaybayram
-  facebook: otomatikmuhendis  # eg. daattali
-  github: olcay    # eg. daattali
-  twitter: otomatikmuh   # eg. daattali
-  linkedin: in/olcaybayram  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: yourlink  # eg. "3943160/daattali"
+  facebook: otomatikmuhendis
+  github: olcay
+  twitter: otomatikmuh
+  linkedin: in/olcaybayram
+  website: http://olcaybayram.com.tr
  
 # Select which links to show in the footer
 footer-links-active:
@@ -58,12 +60,12 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "en.otomatikmuhendis.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "en.otomatikmuhendis.com"
 
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "a-clockwork-engineer"
+disqus_shortname: "a-clockwork-engineer"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-43894898-3"
