--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
-url: "http://en.otomatikmuhendis.com"
+url: "https://olcay.dev"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -47,20 +47,12 @@ author:
   twitter: otomatikmuh
   linkedin: in/olcaybayram
   website: http://olcaybayram.com.tr
- 
-# Select which links to show in the footer
-footer-links-active:
-  rss: false
-  facebook: true
-  email: true
-  twitter: true
-  github: true
-  linkedin: true
-  stackoverflow: false
+  instagram: otomatikmuhendis
+  youtube: olcaybayramom
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "en.otomatikmuhendis.com"
+url-pretty: "olcay.dev"
 
 # --- Misc --- #
 
@@ -73,7 +65,7 @@ google_analytics: "UA-43894898-3"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "Europe/Istanbul"
+timezone: "Europe/Amsterdam"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year/:month/:day/:title/
