--- a/_config.yml
+++ b/_config.yml
@@ -168,7 +168,7 @@ prose:
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
 
-gems:
+plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-paginate
