--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,6 @@ prose:
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
 
-plugins:
+gems:
   - github-pages
   - html-proofer
