--- a/_config.yml
+++ b/_config.yml
@@ -168,6 +168,8 @@ prose:
           label: "Publish"
           help: "Check to publish post, uncheck to hide."
 
-gems:
-  - github-pages
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
   - html-proofer
