--- a/_data/learning.yml
+++ b/_data/learning.yml
@@ -6,3 +6,6 @@
 
 - name: Duolingo
   href: http://certs.duolingo.com/8nztv9nz
+
+- name: Harvard CS50
+  href: https://cs50.harvard.edu/certificates/181b84e8-4ac7-4c4c-afad-0828eedb1d60
