Remove twitter links

--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   fbadmin: olcaybayram
   facebook: otomatikmuhendis
   github: olcay
-  twitter: otomatikmuh
+  twitter:
   linkedin: in/olcaybayram
   website: http://olcaybayram.com.tr
   instagram: otomatikmuhendis
